[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Scenes/Game/Entities/Player/CameraShake.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/sanctuary_BG.png" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/LifeCrystal.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/MagicCrystal.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/LightCrystal.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/player1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/Guide.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Scenes/Sanctuary/EndingScene.gd" type="Script" id=9]
[ext_resource path="res://Assets/Audio/Music/Calm Ambient.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Audio/Effects/button_select.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Audio/Effects/enemy_appear.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="EndingScene" type="Node"]
script = ExtResource( 9 )
sound_effects = [ ExtResource( 11 ), ExtResource( 12 ) ]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialoguePanel" type="Panel" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -352.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueText" type="Label" parent="CanvasLayer/DialoguePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sanctuary_BG" type="Sprite" parent="."]
position = Vector2( 512, 288 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 516.573, 299.813 )
current = true
script = ExtResource( 1 )

[node name="ShakeTween" type="Tween" parent="Camera2D"]

[node name="Duration" type="Timer" parent="Camera2D"]

[node name="Frequency" type="Timer" parent="Camera2D"]

[node name="LifeCrystal" type="Sprite" parent="."]
position = Vector2( 448, 160 )
texture = ExtResource( 3 )

[node name="LightCrystal" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 96 )
texture = ExtResource( 5 )

[node name="MagicCrystal" type="Sprite" parent="."]
position = Vector2( 576, 160 )
texture = ExtResource( 4 )

[node name="Guide" type="Sprite" parent="."]
position = Vector2( 512, 160 )
texture = ExtResource( 7 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( 448, 288 )
texture = ExtResource( 6 )

[node name="InputWait" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="EffectPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="timeout" from="Camera2D/Duration" to="Camera2D" method="_on_Duration_timeout"]
[connection signal="timeout" from="Camera2D/Frequency" to="Camera2D" method="_on_Frequency_timeout"]
[connection signal="timeout" from="InputWait" to="." method="_on_InputWait_timeout"]
